--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.4.6",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.1",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.18"
